# pretalx-youtube

./: MANIFEST.in  README.md  README.rst  data.json  justfile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: dependabot-auto-merge.yml  style.yml  tests.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_144cd7b0e19f598d___init___py.html  z_144cd7b0e19f598d_api_py.html  z_144cd7b0e19f598d_apps_py.html  z_144cd7b0e19f598d_forms_py.html  z_144cd7b0e19f598d_models_py.html  z_144cd7b0e19f598d_recording_py.html  z_144cd7b0e19f598d_signals_py.html  z_144cd7b0e19f598d_utils_py.html  z_144cd7b0e19f598d_views_py.html
pretalx_youtube/: api.py  apps.py  forms.py  models.py  recording.py  signals.py  urls.py  utils.py  views.py
pretalx_youtube/locale/ar/LC_MESSAGES/: django.po
pretalx_youtube/locale/ca/LC_MESSAGES/: django.po
pretalx_youtube/locale/cs/LC_MESSAGES/: django.po
pretalx_youtube/locale/de_DE/LC_MESSAGES/: django.po
pretalx_youtube/locale/el/LC_MESSAGES/: django.po
pretalx_youtube/locale/en_Mozilla/LC_MESSAGES/: django.po
pretalx_youtube/locale/it/LC_MESSAGES/: django.po
pretalx_youtube/locale/ja_JP/LC_MESSAGES/: django.po
pretalx_youtube/locale/nl/LC_MESSAGES/: django.po
pretalx_youtube/locale/pt_BR/LC_MESSAGES/: django.po
pretalx_youtube/locale/ru/LC_MESSAGES/: django.po
pretalx_youtube/locale/sl/LC_MESSAGES/: django.po
pretalx_youtube/migrations/: 0001_initial.py  0002_youtubewebhooksettings.py
pretalx_youtube/templates/pretalx_youtube/: settings.html
tests/: conftest.py  test_main.py
(+6 files in other folders)
