[project]
name = "pretalx-youtube"
dynamic = ["version"]
description = "Static youtube for pretalx, e.g. information, venue listings, a Code of Conduct, etc."
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["pretalx"]
authors = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]
maintainers = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]

dependencies = []

[project.urls]
homepage = "https://github.com/pretalx/pretalx-youtube"
repository = "https://github.com/pretalx/pretalx-youtube.git"

[project.entry-points."pretalx.plugin"]
pretalx_youtube = "pretalx_youtube:PretalxPluginMeta"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretalx_youtube.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]

[tool.check-manifest]
ignore = [".*"]
